--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -58,3 +58,80 @@
     margin-top: 0em;
     padding-bottom: 3em;
   }
+
+  @media screen and (max-width: 768px) {
+    .divContainer {
+        display: grid;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 40em;
+        width: 30em;
+        border-radius: 1em;
+        margin-top: 8em;
+        padding-bottom: 3em;
+        box-shadow: 1px 0px 31px 5px rgba(0, 0, 0, 0.4);
+        background-color: hsla(0, 100%, 98%, 0.78);
+        }
+    .formContainer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 0;
+    }
+    .containerss{
+        background-image: url("../../images/bghomepoke2.png");
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 100vh;
+        width: 100vw;
+        padding-top: 1em;
+        padding-bottom: 30em;
+    }
+    .types{
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: (2 auto, 1fr);
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: 30em;
+        border-radius: 1em;
+        max-height: 80vh;
+        margin-top: 0em;
+        padding-bottom: 3em;
+      }
+    .btn{
+        margin-top: -3.5em;
+    }
+    .PoKreate{
+        padding-top: 1em;
+    }
+    .errors{
+        color: red;
+      }
+    .divContainer {
+        display: grid;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 40em;
+        width: 30em;
+        border-radius: 1em;
+        margin-top: 8em;
+        padding-bottom: 3em;
+        box-shadow: 1px 0px 31px 5px rgba(0, 0, 0, 0.4);
+        background-color: hsla(0, 100%, 98%, 0.78);
+        }
+    .formContainer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 0;
+    }
+}
