--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -19,10 +19,7 @@
   justify-content: center;
   padding-top: 30px;
   width: 10%;
-  margin-left: 20px;
   width: 10%;
-  padding-right: 30px;
-  
 }
 .container {
   padding-top: 30px;
@@ -32,7 +29,8 @@
   justify-content: center;
   height: 0%;
   padding-top:10px;
-  margin-left: 20px;
+  margin-left: 10px;
+ 
 }
 .searchContainer {
   grid-column-start: 1;
@@ -87,6 +85,25 @@
    height: 5em;
    margin-right: -8em;
 }
+
+.footer2{
+  width: 100vw;
+  background-color: #de7300;
+  display: flex;
+  justify-content: center;
+}
+.yo{
+  display: flex;
+  margin-left: 50em;
+  margin-top:1.2em;
+}
+.linked{
+  margin-right:1em;
+  cursor: pointer;
+  color:black;
+}
+
+
 @media (min-width: 800px) {
   .pokemonContainer {
     grid-template-columns: repeat(2, 1fr);
@@ -98,6 +115,13 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+@media (max-width: 999px) {
+  .footer2, .yo {
+    display: none;
+  }
+}
+
 
 @media (min-width: 1800px) {
   .pokemonContainer {
@@ -111,7 +135,19 @@
   }
 }
 
-@media (max-width: 1680px) {
+@media (max-width:200px){
+  .filterContainer{
+    width: 50%; 
+  }
+}
+
+@media(max-width: 400px){
+  .filterContainer{
+    width: 50%; 
+  }
+}
+
+@media (max-width: 1480px) {
   .body {
     grid-template-columns: auto;
     grid-template-rows: 15em auto auto 100px;
@@ -123,7 +159,8 @@
     grid-row-end: 4;
   }
   .filterContainer {
-    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 1;
     height: auto;
   }
   .searchContainer {
